@@ -176,6 +176,15 @@ name|OMIT_POSITIONS
 init|=
 literal|0x00002000
 decl_stmt|;
+DECL|field|STORE_OFFSETS
+specifier|protected
+specifier|final
+specifier|static
+name|int
+name|STORE_OFFSETS
+init|=
+literal|0x00004000
+decl_stmt|;
 DECL|field|propertyNames
 specifier|static
 specifier|final
@@ -211,6 +220,8 @@ block|,
 literal|"required"
 block|,
 literal|"omitPositions"
+block|,
+literal|"storeOffsetsWithPositions"
 block|}
 decl_stmt|;
 DECL|field|propertyMap
