@@ -1499,6 +1499,22 @@ operator|.
 name|DOCS_AND_FREQS
 expr_stmt|;
 block|}
+elseif|else
+if|if
+condition|(
+name|field
+operator|.
+name|storeOffsetsWithPositions
+argument_list|()
+condition|)
+block|{
+name|options
+operator|=
+name|IndexOptions
+operator|.
+name|DOCS_AND_FREQS_AND_POSITIONS_AND_OFFSETS
+expr_stmt|;
+block|}
 return|return
 name|options
 return|;
