@@ -448,6 +448,22 @@ operator|!=
 literal|0
 return|;
 block|}
+DECL|method|storeOffsetsWithPositions
+specifier|public
+name|boolean
+name|storeOffsetsWithPositions
+parameter_list|()
+block|{
+return|return
+operator|(
+name|properties
+operator|&
+name|STORE_OFFSETS
+operator|)
+operator|!=
+literal|0
+return|;
+block|}
 DECL|method|multiValued
 specifier|public
 name|boolean
